--- a/default/package.json
+++ b/default/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@react-google-maps/api": "^2.7.0",
@@ -16,6 +17,8 @@
     "react-bootstrap": "^2.0.3",
     "react-calendar": "^3.4.0",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
