--- a/default/package.json
+++ b/default/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "global": "^4.4.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-calendar": "^3.4.0",
@@ -20,7 +21,7 @@
     "react-google-login": "^5.2.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.1",
     "swiper": "^6.8.4",
