--- a/default/package.json
+++ b/default/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "global": "^4.4.0",
+    "nanoid": "^3.3.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-calendar": "^3.4.0",
@@ -22,6 +23,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.0",
+    "react-transition-group": "^4.4.2",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.1",
     "swiper": "^6.8.4",
