--- a/default/package.json
+++ b/default/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.0",
     "global": "^4.4.0",
     "nanoid": "^3.3.1",
     "react": "^17.0.2",
